--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "detox:android:test:release": "adb shell service call alarm 3 s16 Europe/Prague && detox test -c android.emu.release --record-videos all --record-logs all --headless -l verbose",
     "detox:clean": "rimraf example/android/build && rimraf example/android/app/build && rimraf example/android/.gradle && rimraf example/ios/build",
     "plugin:build": "expo-module build plugin",
-    "generateManifest": "node node_modules/react-native-test-app/android/android-manifest.js example/app.json example/android/app/build/generated/rnta/src/main/AndroidManifest.xml"
+    "generateManifest": "npx patch-package && node node_modules/react-native-test-app/android/android-manifest.js example/app.json example/android/app/build/generated/rnta/src/main/AndroidManifest.xml"
   },
   "repository": {
     "type": "git",
@@ -103,6 +103,9 @@
   },
   "dependencies": {
     "invariant": "^2.2.4"
+  },
+  "resolutions": {
+    "@react-native-community/cli": "14.1.1"
   },
   "peerDependencies": {
     "expo": ">=50.0.0",
